--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -138,6 +138,9 @@ input[type='range']::-webkit-slider-thumb {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.grid_element {
+    user-select: none;
+}
 
 /* FOOTER */
 
